\name{DiffBindNews}
\title{DiffBind News}
\encoding{UTF-8}

\section{version 1.7.4}{
   \itemize{
     \item{Add support for DESeq2}
     \item{Change defaults to use Full library size instead of Effective library size (dba.count, dba.analyze)}
     \item{Vignette updated to us einline expressions instead of numerical constants, added technical details section for DESeq2}
     \item{Expanded warnings}
  }
}

\section{version 1.7.3}{
   \itemize{
     \item{Add generation of result-based DBA object using dba.report}
     \item{Warnings}
  }
}

\section{version 1.7.1}{
   \itemize{
     \item{Fix to track change in edgeR interface}
  }
}

\section{Version 1.6.0}{
   \itemize{
      \item{New: Low memory counting of bam files using Rsamtools and summarizeOverlaps (bLowMem in dba.count)}
      \item{New: Ability to read in externally derived counts (e.g. from htSeq) (dba.count)}
      \item{Improved: Features to deal with filtering intervals based on read scores (dba.count)}
         \itemize{
            \item{Change parameter name: maxFilter -> filter}
            \item{Allow maxFilter to be a numerical vector to retrieve filtering rate}
            \item{Add parameter: filterFun to control filtering method}
        }
      \item{New: Support for SummarizedExperiment objects (dba and dba.report)} 
          \itemize{
            \item{Add bSummarizedExperiment option to dba() to convert DBA object}
            \item{Add DataType = DBA_DATA_SUMMARIZED_REPORT option to dba.report() to return SummarizedExperiment}
         }
      \item{Documentation: Add section to vignette showing how to obtain full tamoxifen resistance dataset}  
         \itemize{
            \item{Add section to vignette showing how to obtains full tamoxifen dataset}
            \item{Add script (tamoxifen_GEO.R) and sample sheet (tamoxifen_GEO.csv) to extras for full tamoxifen dataset}
            \item{Add examples to man page for dba.count to show filtering}