@@ -1,8 +1,8 @@
 Package: DiffBind
 Type: Package
-Version: 1.7.4
+Version: 1.7.5
 Title: Differential Binding Analysis of ChIP-Seq peak data
-Date: 2013-09-16
+Date: 2013-09-24
 Author: Rory Stark<rory.stark@cruk.cam.ac.uk>, Gordon Brown <gordon.brown@cruk.cam.ac.uk>
 Maintainer: Rory Stark<rory.stark@cruk.cam.ac.uk>
 Description: Compute differentially bound sites from multiple ChIP-seq experiments using affinity (quantitative) data. Also enables occupancy (overlap) analysis and plotting functions.
