@@ -43,6 +43,9 @@ export(dba,
        DBA_SCORE_TMM_MINUS_EFFECTIVE,
        DBA_SCORE_TMM_READS_FULL,
        DBA_SCORE_TMM_READS_EFFECTIVE,
+       DBA_READS_DEFAULT,
+       DBA_READS_BAM,
+       DBA_READS_BED, 
        DBA_EDGER,
        DBA_EDGER_BLOCK,
        DBA_EDGER_GLM,
